<resources>
    <string name="app_name">listen</string>
    <string name="title_activity_second">SecondActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="hello_world">Hello world!</string>
    <string name="Recording">Android Audio Recording Application</string>
    <string name="img_said">start</string>
    <string name="img_stop_said">stop</string>

    <string name="Listen">Listen</string>
    <string name="Speak">Speak</string>
    <string name="Talk">Talk</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
<<<<<<< HEAD
=======
<<<<<<< HEAD
>>>>>>> 9ce83f40cd824e521188b6531d55d310f4b6e0b2
    <string name="username">username</string>
    <string name="password">Password</string>
    <string name="password_confirmation">Password confirmation</string>
    <string name="number">number</string>
    <string name="check_number">check number</string>
    <string name="register">Register</string>
    <string name="email">email</string>
    <string name="btn_link_to_login">btn_link_to_login</string>
    <string name="btn_link_to_register">btn_link_to_register</string>
    <string name="login">login</string>
    <string name="account_created">your account has been created.</string>
    <string name="enter_credentials">Enter your credentials.</string>
<<<<<<< HEAD
=======
=======
>>>>>>> 73c9a7788cb0f337159e99c790a5464c42963a70
>>>>>>> 9ce83f40cd824e521188b6531d55d310f4b6e0b2
</resources>
