<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
<<<<<<< HEAD
    android:background="#24d7d1"
    tools:context="com.example.administrator.listen.RegisterAccount">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="430dp"
        android:background="@drawable/cat2"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/et_username"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="90dp"
            android:layout_marginStart="70dp"
            android:layout_marginTop="120dp"
            android:hint="@string/username"
            android:inputType="textCapWords" />

        <EditText
            android:id="@+id/et_email"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="90dp"
            android:layout_marginStart="70dp"
            android:layout_marginTop="30dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/text_password"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="70dp"
            android:layout_marginStart="70dp"
            android:layout_marginTop="30dp"
            android:hint="@string/password"
            android:inputType="textPassword" />
=======
    tools:context="com.example.administrator.listen.RegisterAccount">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
<<<<<<< HEAD
        android:background="@drawable/cat2"/>
=======
        android:background="@drawable/cat_register"/>
>>>>>>> 73c9a7788cb0f337159e99c790a5464c42963a70
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <EditText
            android:id="@+id/et_username"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="70dp"
            android:layout_marginTop="80dp"
<<<<<<< HEAD
            android:hint="@string/username"
            android:inputType="textCapWords"
            android:layout_marginStart="70dp" />

        <EditText
            android:id="@+id/et_email"
=======
            android:hint="Username" />

        <EditText
            android:id="@+id/et_password"
>>>>>>> 73c9a7788cb0f337159e99c790a5464c42963a70
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="70dp"
            android:layout_marginTop="30dp"
<<<<<<< HEAD
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:layout_marginStart="70dp" />

        <EditText
            android:id="@+id/text_password"
=======
            android:hint="Password"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/text_password_again"
>>>>>>> 73c9a7788cb0f337159e99c790a5464c42963a70
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="70dp"
            android:layout_marginTop="30dp"
<<<<<<< HEAD
            android:hint="@string/password"
            android:inputType="textPassword"
            android:layout_marginStart="70dp" />
=======
            android:hint="Password confirmation" />
>>>>>>> 73c9a7788cb0f337159e99c790a5464c42963a70

>>>>>>> 9ce83f40cd824e521188b6531d55d310f4b6e0b2
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
<<<<<<< HEAD
        </LinearLayout>
        <Button
            android:id="@+id/btnRegister"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="70dp"
            android:layout_marginTop="70dp"
            android:background="@android:color/white"
            android:text="@string/register"
            android:textColor="@android:color/black" />

        <Button
            android:id="@+id/btnLinkToLoginScreen"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
=======

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="70dp"
                android:layout_marginTop="30dp"
<<<<<<< HEAD
                android:text="@string/number"
                android:textColor="@android:color/holo_blue_bright"
                android:textSize="25dp"
                android:layout_marginStart="70dp" />
=======
                android:text=" number"
                android:textColor="@android:color/holo_blue_bright"
                android:textSize="25dp" />
>>>>>>> 73c9a7788cb0f337159e99c790a5464c42963a70

            <TextView
                android:id="@+id/text_checknum"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="30dp"
<<<<<<< HEAD
                android:text="@string/check_number"
                android:textSize="15dp"
                android:layout_marginStart="10dp" />
=======
                android:text="check number"
                android:textSize="15dp" />
>>>>>>> 73c9a7788cb0f337159e99c790a5464c42963a70
        </LinearLayout>

        <EditText
            android:id="@+id/check_numb"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="70dp"
            android:layout_marginTop="30dp"
<<<<<<< HEAD
            android:text="@string/check_number" />
=======
            android:text="check number" />
>>>>>>> 73c9a7788cb0f337159e99c790a5464c42963a70

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="70dp"
            android:layout_marginTop="40dp"
<<<<<<< HEAD
            android:text="@string/register"
            android:background="@android:color/white"
            android:textColor="@android:color/black"/>
        <Button
            android:id="@+id/btnLinkToLoginScreen"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
>>>>>>> 9ce83f40cd824e521188b6531d55d310f4b6e0b2
            android:background="@null"
            android:text="@string/btn_link_to_login"
            android:textAllCaps="false"
            android:textSize="15dp" />
<<<<<<< HEAD

    </LinearLayout>
=======

    </LinearLayout>
=======
            android:text="Register"
            android:background="@android:color/white"
            android:textColor="@android:color/black"/>
    </LinearLayout>


>>>>>>> 73c9a7788cb0f337159e99c790a5464c42963a70
>>>>>>> 9ce83f40cd824e521188b6531d55d310f4b6e0b2
</FrameLayout>
